--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     font-family: 'Raleway', sans-serif;
 }
 
-header{
+header.games{
     width: 100%;
     height: 100vh;
     position: relative;
@@ -21,15 +21,39 @@ header nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 200px;
+    padding: 0 20px;
     transition: 0.5s ease;
 }
 
 .layer1{
     position: absolute;
     bottom: 0;
-    width: 425px;
+    width: 410px;
     left: 40px;
+    z-index: 20;
+}
+
+.layer1.dead{
+    position: absolute;
+    bottom: 0;
+    width: 285px;
+    left: 0;
+    z-index: 20;
+}
+
+.layer1.slay{
+    position: absolute;
+    bottom: 0;
+    width: 285px;
+    left: 0;
+    z-index: 20;
+}
+
+.layer1.rogue{
+    position: absolute;
+    bottom: 0;
+    width: 1480px;
+    left: 0;
     z-index: 20;
 }
 
@@ -38,6 +62,22 @@ header nav{
     width: 900px;
     bottom: 0;
     right: 0;
+    z-index: 18;
+}
+
+.layer2.dead{
+    position: absolute;
+    width: 1480px;
+    bottom: 0;
+    left: 0;
+    z-index: 18;
+}
+
+.layer2.slay{
+    position: absolute;
+    width: 1480px;
+    bottom: 0;
+    left: 0;
     z-index: 18;
 }
 
@@ -56,24 +96,36 @@ header nav .backhome{
 }
 
 header nav .navigation{
-    position: relative;
+    display: none;
+}
+
+header nav .navigation.active{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(1, 1, 1, 0.5);
 }
 
 header nav .navigation .navigation-items a{
     position: relative;
-    color: #fff;
-    font-size: 1em;
+    color: #222;
+    font-size: 1.2em;
     font-weight: 500;
     text-decoration: none;
-    margin-left: 30px;
+    margin: 20px;
 }
 
 header nav .navigation .navigation-items a:before{
     content: '';
     position: absolute;
-    background: #fff;
+    background: #222;
     width: 0;
-    height: 3px;
+    height: 5px;
     bottom: 0;
     left: 0;
     transition: 0.3s ease;
@@ -84,15 +136,46 @@ header nav .navigation .navigation-items a:hover{
     font-size: 0.84em;
 }
 
+header nav .navigation.active .navigation-items{
+    background: #fff;
+    width: 600px;
+    max-width: 600px;
+    margin: 20px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+}
+
 header nav .navigation .navigation-items a:hover:before{
     width: 100%;
+}
+
+.menu-btn{
+    background: url('../image/menu\ icon.png')no-repeat;
+    background-size: 30px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.menu-btn.active{
+    z-index: 999;
+    background: url('../image/close.png')no-repeat;
+    background-size: 25px;
+    background-position: center;
+    transition: 0.3s ease;
 }
 
 .bigTitle{
     position: absolute;
     z-index: 19;
     line-height: 6rem;
-    top: 40%;
+    top: 20%;
     width: 100%;
     text-align: center;
     font-size: 5rem;
@@ -101,7 +184,7 @@ header nav .navigation .navigation-items a:hover:before{
 }
 
 main{
-    padding: 100px 200px;
+    padding: 100px 20px;
 }
 
 #main{
@@ -128,7 +211,7 @@ main{
 #main .content{
     z-index: 888;
     color: #fff;
-    width: 70%;
+    width: 100%;
     margin-top: 50px;
     display: none;
     transition: 2s ease;
@@ -139,10 +222,10 @@ main{
 }
 
 #main .content h1{
-    font-size: 4em;
+    font-size: 3.5em;
     font-weight: 600;
     text-transform: uppercase;
-    line-height: 75px;
+    line-height: 60px;
     margin-bottom: 40px;
 }
 
@@ -153,9 +236,9 @@ main{
 }
 
 #main .content p{
-    margin-bottom: 65px;
+    margin-bottom: 40px;
     line-height: 1.4;
-    padding-right: 80px;
+    padding-right: 0;
 }
 
 #main .content a{
@@ -171,9 +254,11 @@ main{
 #main .link-icons{
     z-index: 888;
     position: absolute;
-    right: 40px;
+    right: 30px;
+    bottom: 90px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    column-gap: 20px;
     transition: 0.5s ease;
 }
 
@@ -212,10 +297,10 @@ main{
 }
 
 .slider-navigation .nav-btn{
-    width: 12px;
-    height: 12px;
+    width: 40px;
+    height: 5px;
     background: #fff;
-    border-radius: 50%;
+    border-radius: 25%;
     cursor: pointer;
     box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
     transition: 0.3s ease;
@@ -294,12 +379,11 @@ main{
 }
 
 .gameDescription .descriptionContainer{
-    padding: 3rem;
+    padding: 0;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
-    min-height: 50vh;
     opacity: 0;
     transition: opacity 1s ease-in;
 }
@@ -308,16 +392,29 @@ main{
     text-align: center;
 }
 
-.gameDescription img{
+.gameDescription .imgContainer img{
     width: 80%;
 }
 
+.gameDescription .imgContainer.history img{
+    width: 75%;
+    margin-bottom: 10px;
+}
+
 .gameDescription .descriptionContainer > *{
-    margin: 2rem;
+    margin: 2rem 1rem;
 }
 
 .description{
     color: #fff;
+}
+
+.description.basic p:not(:last-child){
+    padding-bottom: 20px;
+}
+
+.description strong{
+    font-weight: 800;
 }
 
 .title{
@@ -326,6 +423,7 @@ main{
     margin-bottom: 1rem;
     padding-bottom: 0.5rem;
     position: relative;
+    color: #fff;
 }
 
 .border{
@@ -341,6 +439,7 @@ main{
     line-height: 1.25rem;
     padding-bottom: 20px;
     text-indent: 30px;
+    color: #fff;
 }
 
 .gameDescription img.characterImg{
@@ -353,25 +452,69 @@ main{
     padding-bottom: 10px;
 }
 
+.achievements{
+    padding: 0;
+    margin: 2rem 1rem;
+}
 
-@media (max-width: 1040px){
-    header{
-        padding: 12px 20px;
+.achieveImages{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 20px;
+}
+
+.achieveImages img{
+    width: 75%;
+}
+
+.characteristics{
+    padding: 0;
+    margin: 2rem 1rem;
+}
+
+.character{
+    border-radius: 1.5px;
+    padding: 20px;
+    transition: opacity 0.5s ease-in;
+}
+
+.character:nth-child(2n){
+    border: double rgb(255, 136, 0) 8px;
+}
+
+.character:nth-child(2n-1){
+    border: dotted rgb(94, 255, 0) 8px;
+    text-align: right;
+}
+
+.character:not(:last-child){
+    margin-bottom: 20px;
+}
+
+.character h4{
+    margin-bottom: 5px;
+    font-size: 1rem;
+}
+
+
+@media only screen and (min-width: 480px){
+    header nav{
+        padding: 0 40px;
     }
 
-    section{
-        padding: 100px 20px;
+    main{
+        padding: 100px 40px;
     }
 
     .home .media-icons{
         right: 15px;
     }
 
-    header .navigation{
+    header nav .navigation{
         display: none;
     }
 
-    header .navigation.active{
+    header nav .navigation.active{
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -383,18 +526,18 @@ main{
         background: rgba(1, 1, 1, 0.5);
     }
 
-    header .navigation .navigation-items a{
+    header nav .navigation .navigation-items a{
         color: #222;
         font-size: 1.2em;
         margin: 20px;
     }
 
-    header .navigation .navigation-items a::before{
+    header nav .navigation .navigation-items a::before{
         background: #222;
         height: 5px;
     }
 
-    header .navigation.active .navigation-items{
+    header nav .navigation.active .navigation-items{
         background: #fff;
         width: 600px;
         max-width: 600px;
@@ -423,5 +566,205 @@ main{
         background-size: 25px;
         background-position: center;
         transition: 0.3s ease;
+    }
+
+    #main .content{
+        width: 70%;
+    }
+
+    #main .content h1{
+        font-size: 3.5rem;
+        line-height: 60px;
+    }
+
+    #main .content p{
+        padding-right: 0;
+        margin-bottom: 65px;
+    }
+
+    #main .link-icons{
+        bottom: 45%;
+        right: 30px;
+        flex-direction: column;
+        column-gap: 0;
+    }
+
+    .slider-navigation .nav-btn{
+        width: 40px;
+        height: 10px;
+        border-radius: 30%;
+        box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    }
+
+    .slider-navigation .nav-btn:not(:last-child) {
+        margin-right: 60px;
+    }
+
+    .bigTitle{
+        top: 30%;
+    }
+
+    .layer1{
+        width: 425px;
+    }
+
+    .layer1.slay{
+        width: 425px;
+    }
+
+    .layer1.dead{
+        width: 425px;
+    }
+
+    .layer3{
+        width: 2400px;
+    }
+
+    .layer2{
+        width: 1400px;
+    }
+
+    .gameDescription .descriptionContainer{
+        grid-template-columns: 1fr;
+        padding: 3rem;
+    }
+
+    .gameDescription .descriptionContainer > *{
+        margin: 2rem 1rem;
+    }
+
+    .achievements{
+        padding: 0;
+        margin: 2rem 1rem;
+    }
+}
+
+@media only screen and (min-width: 1048px) {
+    header nav{
+        padding: 15px 200px;
+    }
+
+    main{
+        padding: 100px 200px;
+    }
+
+    .home .media-icons{
+        right: 15px;
+    }
+
+    header nav .navigation{
+        display: block;
+        position: relative;
+    }
+
+    header nav .navigation .navigation-items a{
+        color: #fff;
+        font-size: 1em;
+        margin: 0 0 0 30px;
+    }
+
+    header nav .navigation .navigation-items a::before{
+        background: #fff;
+        height: 3px;
+    }
+
+    header nav .navigation.active .navigation-items{
+        background: #fff;
+        width: 600px;
+        max-width: 600px;
+        margin: 20px;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 5px;
+        box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+    }
+
+    .menu-btn{
+        display: none;
+    }
+
+    #main .content{
+        width: 70%;
+    }
+
+    #main .content h1{
+        font-size: 4rem;
+        line-height: 75px;
+    }
+
+    #main .content p{
+        padding-right: 80px;
+        margin-bottom: 65px;
+    }
+
+    #main .link-icons{
+        bottom: none;
+        right: 40px;
+        flex-direction: column;
+        column-gap: 0;
+    }
+
+    .slider-navigation .nav-btn{
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    }
+
+    .slider-navigation .nav-btn:not(:last-child) {
+        margin-right: 20px;
+    }
+
+    .bigTitle{
+        top: 40%;
+    }
+
+    .layer1{
+        width: 425px;
+    }
+
+    .layer1.slay{
+        width: 485px;
+    }
+
+    .layer1.dead{
+        width: 475px;
+    }
+
+    .layer2{
+        width: 900px;
+    }
+
+    .layer3{
+        width: 1480px;
+    }
+
+    .gameDescription .descriptionContainer{
+        grid-template-columns: repeat(2, 1fr);
+        padding: 3rem;
+    }
+
+    .gameDescription .descriptionContainer > *{
+        margin: 2rem;
+    }
+
+    .achievements{
+        padding: 3rem;
+        margin: 2rem;
+    }
+
+    .characteristics{
+        padding: 3rem;
+        margin: 2rem;
+    }
+
+    .character:nth-child(2n){
+        margin-right: 25%;
+    }
+
+    .character:nth-child(2n-1){
+        margin-left: 25%;
     }
 }
