--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     font-family: 'Raleway', sans-serif;
 }
 
+header{
+    background: rgb(0, 0, 0);
+}
+
 header.games{
     width: 100%;
     height: 100vh;
@@ -84,7 +88,7 @@ header nav{
 .layer3{
     position: absolute;
     width: 1480px;
-    bottom: 0;
+    top: 0;
     right: 0;
 }
 
@@ -721,23 +725,36 @@ main{
     }
 
     .layer1{
-        width: 425px;
+        width: 33%;
     }
 
     .layer1.slay{
-        width: 485px;
+        width: 33%;
     }
 
     .layer1.dead{
-        width: 475px;
+        width: 32%;
+    }
+
+    .layer1.rogue{
+        width: 100%;
     }
 
     .layer2{
-        width: 900px;
+        width: 60%;
+    }
+
+    .layer2.slay{
+        width: 100%;
+    }
+
+    .layer2.dead{
+        width: 100%;
     }
 
     .layer3{
-        width: 1480px;
+        height: 100vh;
+        width: 100%;
     }
 
     .gameDescription .descriptionContainer{
